[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/character/Skeleton/Skeleton Idle.png" type="Texture" id=1]
[ext_resource path="res://images/character/Skeleton/Skeleton Hit.png" type="Texture" id=2]
[ext_resource path="res://images/character/Skeleton/Skeleton Dead.png" type="Texture" id=3]
[ext_resource path="res://Skeleton.gd" type="Script" id=4]
[ext_resource path="res://images/Effects/hp_progress_white.png" type="Texture" id=5]
[ext_resource path="res://images/Effects/hp_top.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[sub_resource type="Animation" id=3]
resource_name = "Dead"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Dead:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hurt Left"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ Vector2( -1, 0 ) ],
"method": "hurtMovement"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hurt Right"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ Vector2( 1, 0 ) ],
"method": "hurtMovement"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Hurt" type="Sprite" parent="."]
position = Vector2( 312, 176 )
texture = ExtResource( 2 )
hframes = 8

[node name="Idle" type="Sprite" parent="."]
position = Vector2( 312, 176 )
texture = ExtResource( 1 )
hframes = 11
frame = 9

[node name="Dead" type="Sprite" parent="."]
position = Vector2( 304, 176 )
texture = ExtResource( 3 )
offset = Vector2( 3, 0 )
hframes = 15
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 310, 179 )
scale = Vector2( 1.2, 0.8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 3 )
"anims/Hurt Left" = SubResource( 5 )
"anims/Hurt Right" = SubResource( 4 )
anims/Idle = SubResource( 2 )

[node name="RespawnTime" type="Timer" parent="."]
wait_time = 10.0

[node name="AttackArea" type="Area2D" parent="."]

[node name="SkeletonBody" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 310, 179 )
scale = Vector2( 1.3, 0.9 )
shape = SubResource( 1 )

[node name="Hp_bar" type="TextureProgress" parent="."]
margin_left = 295.0
margin_top = 152.0
margin_right = 325.0
margin_bottom = 158.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.235294, 0.235294, 0.235294, 1 )
tint_progress = Color( 0.27451, 0.768627, 0.0509804, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hpbar timer" type="Timer" parent="Hp_bar"]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="Hp_bar"]
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="RespawnTime" to="." method="_on_RespawnTime_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="Hp_bar/Hpbar timer" to="." method="_on_Hpbar_timer_timeout"]
